@@ -1,6 +1,7 @@
 # For more specified changelog, check git log.
 
 v4.0
+	* Re-implemented mdev support, new kernel boot option 'mdev' to force mdev+tmpfs instead of devtmpfs even if available.
 	* use() now can execute command.
 	* get_device replaced with resolve_device function.
 	* Experimental raid support.
